feat: type completion and more robust body keyword completion